[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.1.0"
bytes = "1.1.0"
bincode = "1.3.3"
rsa = "0.6.0"
rand = "0.8.5"
sha1 = "0.10.0"
libaes = "0.6.2"
pem = "1.0.2"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.0"
tokio-util = { version =  "0.7.1", features = ["compat"] }
serde = { version = "1.0.136", features = ["derive"]}